<resources>
    <string name="app_name">WalkersGuide</string>
    <string name="startFragmentName">Start</string>
    <string name="routerFragmentName">Router</string>
    <string name="poiFragmentName">POI</string>
    <string name="miscFragmentName">More</string>
    <string name="previousTabMessage">Change to %s</string>
    <string name="nextTabMessage">Change to %s</string>
    <string name="exitDialogTitle">Close application</string>
    <string name="exitDialogMessage">Do you really want to close this application?\n\n
        Press "Yes" or the Back-Button of your device, to quit.
        Choose "No" or the Menu-Button of your device, to return to the program.</string>
    <string name="buttonNewRoute">Route</string>
    <string name="buttonIntermediatePoint">Via</string>
    <string name="buttonStartRouting">Start routing</string>
    <string name="buttonStartRoutingClicked">Computing</string>
    <string name="buttonRouteObjectStartPoint">%1$d. Starting point: %2$s</string>
    <string name="buttonRouteObjectIntermediatePoint">%1$d. Via: %2$s</string>
    <string name="buttonRouteObjectMultiIntermediatePoint">%1$d. Via%2$d: %3$s</string>
    <string name="buttonRouteObjectDestinationPoint">%1$d. Point of destination: %2$s</string>
    <string name="buttonRouteObjectTransportSegment">%d. Use public transportation</string>
    <string name="buttonRouteObjectFootwaySegment">%d. Walk</string>
    <string name="messageEmptyStartPoint">No starting point</string>
    <string name="messageEmptyIntermediatePoint">No via entered</string>
    <string name="messageEmptyDestinationPoint">No point of destination</string>
    <string name="messageEmptyJSONObject">Unable to create route.</string>
    <string name="messageMultipleTransportSegments">At the moment only one public transport route segment is permitted.</string>
    <string name="messageRouteComputationStarted">Route computation started.</string>
    <string name="messageRouteComputationCanceled">Route computation canceled</string>
    <string name="labelFootwayPlaceholder">Placeholder for a walking route segment</string>
    <string name="labelTransportPlaceholder">Placeholder of a public transport route segment</string>
    <string name="messageVersionRequestFailed">Unable to get the version of the webserver interface.</string>
    <string name="messageVersionRequestAppTooOld">Your version of this application is not longer supported. Please install it\'s recent version first..</string>
    <string name="buttonDownloadNewAppVersion">Update application</string>
    <string name="messageBugReportSendingFailed">Unable to transmit the bug report.</string>
    <string name="messageBugReportSendingSucceeded">The bug report was sent successfully. Thank you.</string>
    <string name="messageTransportRouteDescription">From %1$s to %2$s</string>
    <string name="messageRouteParsingFailed">Error parsing route: %s</string>
    <string name="labelTimeSettingsDialogHeading">Time not synchronized</string>
    <string name="labelTimeSettingsDialogDescription">This application needs the precise time.
        Please activate the option "use network provided time" in your device settings</string>
    <string name="buttonShowTimeSettings">Show system time settings</string>
    <string name="labelBugReportHeading">Bug report</string>
    <string name="labelBugReportDescription">The application encountered a bug report from a previous
        crash. Please take the time to send the bug report to this applications developer, so they
        can solve the problem.  The report contains no personal data and can be viewed before
        sending.</string>
    <string name="buttonShowBugReportDetails">Show bug report</string>
    <string name="buttonSendBugReport">Send bug report</string>
    <string name="buttonDeleteBugReport">Delete bug report</string>
    <string name="messageBugReport">Bug report\n\n%s</string>
    <string name="labelRODialogEmptyStartPoint">Starting point:</string>
    <string name="labelRODialogStartPoint">Starting point: %s</string>
    <string name="labelRODialogEmptyIntermediatePoint">Via:</string>
    <string name="labelRODialogIntermediatePoint">Via: %s</string>
    <string name="labelRODialogEmptyMultiIntermediatePoint">Via %d:</string>
    <string name="labelRODialogMultiIntermediatePoint">Via %1$d: %2$s</string>
    <string name="labelRODialogEmptyDestinationPoint">Point of destination:</string>
    <string name="labelRODialogDestinationPoint">Point of destination: %s</string>
    <string name="buttonRouteObjectDetails">Show point details</string>
    <string name="buttonDeleteIntermediatePoint">Delete point</string>
    <string name="labelRODialogNewObject">Choose route object source</string>
    <string name="buttonCurrentLocation">Current location</string>
    <string name="buttonCurrentLocationClicked">Stop location search</string>
    <string name="buttonAddress">Street address</string>
    <string name="buttonPOI">Point of Interest</string>
    <string name="buttonHistory">History</string>
    <string name="buttonFavorites">Favorites</string>
    <string name="labelAOTRDialogHeading">Where should this via be inserted?</string>
    <string name="buttonAddObjectBeforeDestination">Insert before point of destination</string>
    <string name="buttonAddObjectBeforeIntermediate">Insert before via</string>
    <string name="buttonAddObjectBeforeNIntermediate">Insert before %d. via</string>
    <string name="labelRouteDialogHeading">Current Route</string>
    <string name="labelRouteDialogNewRoute">Choose source for new route</string>
    <string name="buttonNewEmptyRoute">Empty route</string>
    <string name="buttonNewRouteFromHistory">Route from history</string>
    <string name="buttonNewRouteFromFileImport">Route from file</string>
    <string name="labelRouteDialogAdditionalActions">Additional actions</string>
    <string name="buttonSwitchStartAndDestination">Reverse route</string>
    <string name="buttonExportRouteToFile">Export route</string>
    <string name="messageRouteExportError">Error during route export.</string>
    <string name="messageRouteExportSuccessful">Route export into the import-folder was successful.</string>
    <string name="labelRouteDialogRouteFactor">Factor for indirection:</string>
    <string name="labelRouteDialogWayClasses">The following way classes are used for routing:</string>
    <string name="checkBoxBigStreets">Big streets</string>
    <string name="checkBoxSmallStreets">Small streets</string>
    <string name="checkBoxPavedWays">Paved ways</string>
    <string name="checkBoxUnpavedWays">Unpaved ways</string>
    <string name="checkBoxUnclassifiedWays">Unclassified ways</string>
    <string name="checkBoxSteps">Steps</string>
    <string name="buttonSwitchRouteView">Instruction details</string>
    <string name="buttonSwitchRouteViewClicked">Instruction list</string>
    <string name="buttonPrevPoint">Previous</string>
    <string name="buttonNextPoint">Next</string>
    <string name="buttonDetails">Details</string>
    <string name="buttonSimulation">Simulation</string>
    <string name="buttonSimulationClicked">Simulation *</string>
    <string name="arrayAADisabled">Additional options</string>
    <string name="arrayAADisabledOpen">Disable</string>
    <string name="arrayAAAddress">Address</string>
    <string name="arrayAALatestPOI">Latest POI</string>
    <string name="arrayAARouteDescription">Route description</string>
    <string name="arrayAAGPSStatus">GPS Status</string>
    <string-array name="arrayAdditionalOptionsRF">
        <item>@string/arrayAADisabled</item>
        <item>@string/arrayAAAddress</item>
        <item>@string/arrayAALatestPOI</item>
        <item>@string/arrayAARouteDescription</item>
        <item>@string/arrayAAGPSStatus</item>
    </string-array>
    <string name="messageRouteDescription">Description: %s</string>
    <string name="messageNoPOIInRange">No POI in range</string>
    <string name="messageLatestPOI">POI: %s</string>
    <string name="messageCurrentAddress">Address: %s</string>
    <string name="messageNoRouteLoaded">No route loaded</string>
    <string name="messageTwentyFiveMetersFromIntersection">Next intersection %1$s is less than 25 meters away. Turnings: %2$s.</string>
    <string name="messageTwentyFiveMeters">Next route point is only 25 meters away</string>
    <string name="messageReachedIntermediatePointAhead">Point %1$d of %2$d reached. Now move straight ahead.</string>
    <string name="messageReachedIntermediatePointTurn">Point %1$d of %2$d reached. Now turn %3$s.</string>
    <string name="messageReachedIntermediatePointNextSegment"> Next segment: %s</string>
    <string name="messageReachedDestinationPoint">Point %1$d of %2$d reached</string>
    <string name="messageReachedStation">Station %s reached</string>
    <string name="messageDynamicIntersectionDescription">Turnings: %s</string>
    <string name="messageDynamicIntersectionDescriptionWithTS">Turnings: %1$s. %2$d traffic signals nearby.</string>
    <string name="messagePointDescInterStart">Starting point is intersection %s.</string>
    <string name="labelHeadingGPS">GPS and Simulation</string>
    <string name="buttonDisableSimulation">Stop simulation</string>
    <string name="buttonSimulateAddress">Simulate street address</string>
    <string name="buttonGPSStatus">Show GPS status</string>
    <string name="labelHeadingMisc">miscellaneous</string>
    <string name="buttonOpenHistory">Route and point history</string>
    <string name="buttonAddFavorite">Save current location</string>
    <string name="buttonOpenSettings">Settings</string>
    <string name="buttonOpenHelp">Help</string>
    <string name="labelPOIPresetActivityHeading">POI Profiles</string>
    <string name="buttonNewPreset">New</string>
    <string name="buttonStorePreset">Save</string>
    <string name="buttonDeletePreset">Delete</string>
    <string name="labelPOIPresetCategories">Categories</string>
    <string name="labelEnterPOIPresetNameActivityHeading">New Profile</string>
    <string name="labelEnterPresetName">Enter a name for the new POI profile:</string>
    <string name="hintPOIPresetName">Enter name for POI profile</string>
    <string name="labelEnterAddressActivityHeading">Address</string>
    <string name="labelEnterAddress">Enter a street address:</string>
    <string name="labelEnterStreet">Street and house number:</string>
    <string name="hintEnterStreet">Enter the street and house number</string>
    <string name="labelEnterCity">City:</string>
    <string name="hintEnterCity">Enter the city name</string>
    <string name="labelAddFavoriteActivityHeading">Create favorite</string>
    <string name="labelFavoriteName">Enter a name for the favorite.</string>
    <string name="hintEnterFavorite">Enter a name for the favorite.</string>
    <string name="labelSourceRouteDetailsDialogHeading">Route-Details</string>
    <string name="title_gps_status_activity">GPS Status</string>
    <string name="labelLatitude">Latitude:</string>
    <string name="labelLongitude">Longitude:</string>
    <string name="labelProvider">Provider:</string>
    <string name="labelSatellites">Satellites:</string>
    <string name="labelAccuracy">Accuracy:</string>
    <string name="labelAltitude">Altitude:</string>
    <string name="labelSpeed">Speed:</string>
    <string name="labelBearing">Bearing:</string>
    <string name="labelCompass">Compass:</string>
    <string name="labelBearingSource">Source for bearing data: Unknown</string>
    <string name="labelTime">Time:</string>
    <string name="labelRouteImportHeading">Available routes</string>
    <string name="checkBoxDeleteAfterImport">Delete file after successful import</string>
    <string name="labelNoRoutesToImport">Import folder is empty</string>
    <string name="dialogApply">Apply</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogDelete">Delete</string>
</resources>