<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayoutMain"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogCancel" />

        <TextView
            android:id="@+id/labelHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/labelAddFavoriteActivityHeading" 
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/dialogApply" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/labelLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelLatitude" />

        <TextView
            android:id="@+id/labelLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelLongitude" />

        <TextView
            android:id="@+id/labelAccuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelAccuracy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/labelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelFavoriteName" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:hint="@string/hintEnterFavorite"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogDelete" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
