<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogCancel" />

        <TextView
            android:id="@+id/labelHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/labelEnterAddressActivityHeading" 
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogApply" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/labelEnterAddress"  />

    <TextView
        android:id="@+id/labelStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/labelEnterStreet"  />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:hint="@string/hintEnterStreet"
            android:inputType="text"
            android:imeOptions="actionNext" />

        <Button
            android:id="@+id/buttonDeleteStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogDelete" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/labelEnterCity" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:hint="@string/hintEnterCity"
            android:inputType="text"
            android:imeOptions="actionSearch" />

        <Button
            android:id="@+id/buttonDeleteCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogDelete" />
    </LinearLayout>
</LinearLayout>
