<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogCancel" />

        <TextView
            android:id="@+id/labelHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/labelRouteImportHeading" 
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogApply" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioAvailableRoutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <CheckBox
        android:id="@+id/checkBoxDeleteAfterImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/checkBoxDeleteAfterImport" />

    <TextView
        android:id="@+id/labelNoRoutesToImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelNoRoutesToImport" 
        android:textSize="18sp" />
</LinearLayout>
