<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayoutMain" >

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogCancel" />

        <TextView
            android:id="@+id/labelHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/labelPOIPresetActivityHeading" 
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogApply" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewContents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayoutTop"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/linearLayoutContents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spinnerPresets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayoutMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonNewPreset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/buttonNewPreset" />

                <Button
                    android:id="@+id/buttonStorePreset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/buttonStorePreset" />

                <Button
                    android:id="@+id/buttonDeletePreset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/buttonDeletePreset" />
            </LinearLayout>

            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPOIPresetCategories" 
                android:textSize="18sp" />

            <TextView
                android:id="@+id/labelCheckboxError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayoutCheckboxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
